# grit

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  api.proto  compose.yaml  graph.h  grpc-requests.http  main.cc  model.h  run.sh  service.h  storage.proto  transaction.h
.github/workflows/: docker-image.yml
api/: api.proto
docker/: Dockerfile  compose.yaml
src/: encoding.h  graph.h  main.cc  model.h  service.h  state_machine.h  storage.h  storage.proto  transaction.h
test/: CMakeLists.txt  basic_test.cc  performance_test.cc  storage_test.cc  test.cc  test_performance.cc  transaction_test.cc
